Fin IHM nouveau contrat

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
         <app-side-nav [(pers)]="personne" ></app-side-nav>
     </mat-sidenav>
     <mat-sidenav-content role="main">
-        <div class="banniere"></div>
+        <!-- <div class="banniere" ></div>    -->
         <router-outlet></router-outlet>
     </mat-sidenav-content>     
 </mat-sidenav-container>
