--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -21,7 +21,7 @@
     </mat-form-field>
     <mat-icon>phone</mat-icon>
     <mat-form-field>
-        <input matInput [(ngModel)]="personne.telPortable"type="text" placeholder="01-23-45-67-89 ou 0123456789" formControlName="mobile" [formControl]="controlMobile">
+        <input matInput [(ngModel)]="personne.telPortable"type="text" placeholder="01-23-45-67-89 ou 0123456789" formControlName="telPortable" [formControl]="controltelPortable">
     </mat-form-field>
     <mat-icon>date_range</mat-icon>
     <mat-form-field>
