--- a/src/app/side-nav/side-nav.component.html
+++ b/src/app/side-nav/side-nav.component.html
@@ -7,7 +7,7 @@
                 Tableau de bord
               </mat-expansion-panel-header>
               <p>
-                <a href='#'>mon tableau de bord</a>
+                <a >mon tableau de bord</a>
               </p>
             </mat-expansion-panel>
             <mat-expansion-panel>
@@ -22,7 +22,7 @@
                     <a >Avenant de contrat</a>
                 </p>
                 <p>
-                    <a >Ajouter un contrat</a>
+                    <a routerLink="/Contrat">Ajouter un contrat</a>
                 </p>
                 <p>
                     <a >Terminer un contrat</a>
@@ -33,19 +33,17 @@
                 </mat-expansion-panel>                
             <mat-expansion-panel>
                 <mat-expansion-panel-header>
-                <mat-icon>person</mat-icon>
-                Utilisateurs                    
+                    <mat-icon>person</mat-icon>
+                    Personnes                    
                 </mat-expansion-panel-header>
                 <p>
-                <a routerLink="/Profiles">Liste des utilisateurs</a>
+                    <a routerLink="/Profiles">Liste des personnes</a>
                 </p>
                 <p>
-                <a >
-                    Ajouter un Utilisateur 
-                </a>
+                    <a routerLink = "/SignUp">Ajouter une personne</a>
                 </p>
                 <p>
-                <a (click)="updateProfile()">Supprimer un compte utilisateur</a> 
+                    <a (click)="updateProfile()">Modifier un compte utilisateur</a> 
                 </p>
                 </mat-expansion-panel>  
           <mat-expansion-panel>
@@ -54,14 +52,10 @@
             Nounou
           </mat-expansion-panel-header>
           <p>
-            <a href='#'>
-              Editer le profil 
-            </a>
+            <a routerLink="/ProfileNounou">Enregistrer les données contractuelles </a>
           </p>
           <p>
-            <a href='#'>
-              Modifier les informations contractuelles
-            </a>
+            <a (click)="updateProfileNounou()">Modifier le profil utilisateur</a>
           </p>
           </mat-expansion-panel>          
           <mat-expansion-panel>
@@ -70,12 +64,12 @@
               Mois en cours
             </mat-expansion-panel-header>
             <p>
-              <a href='#'>
+              <a>
                 Synthèse 
               </a>
             </p>
             <p>
-              <a href='#'>
+              <a>
                 Vue par enfant
               </a>
             </p>
@@ -90,10 +84,10 @@
               Mon tableau de bord
           </mat-expansion-panel-header>
           <p>
-              <a href='#'>Synthèse du mois en cours</a>
+              <a >Synthèse du mois en cours</a>
           </p>
           <p>
-              <a href='#'>Pointage du mois en cours</a>
+              <a >Pointage du mois en cours</a>
           </p>
       </mat-expansion-panel>    
       <mat-expansion-panel>
@@ -102,15 +96,13 @@
               Mon profil
           </mat-expansion-panel-header>
           <p>
-              <a href='#'>Voir mon profil</a>
+              <a (click)="updateProfileNounou()">Modifier mon profil</a>
           </p>
           <p>
               <a >Modifier une fiche enfant</a>
           </p>
           <p>
-              <a href='#'>
-                  Modifier mes informations financières
-              </a>
+              <a routerLink="/ProfileNounou">Modifier mes informations financières</a>
           </p>
       </mat-expansion-panel> 
       <mat-expansion-panel>
