--- a/src/styles.css
+++ b/src/styles.css
@@ -506,7 +506,7 @@ input.mat-input-element {
   .mat-primary .mat-option.mat-selected:not(.mat-option-disabled) {
     color: #f50057; }
   .mat-accent .mat-option.mat-selected:not(.mat-option-disabled) {
-    color: #448aff; }
+    color: #26a69a; }
   .mat-warn .mat-option.mat-selected:not(.mat-option-disabled) {
     color: #f44336; }
   .mat-option.mat-selected:not(.mat-option-multiple):not(.mat-option-disabled) {
@@ -532,7 +532,7 @@ input.mat-input-element {
 .mat-pseudo-checkbox-indeterminate,
 .mat-accent .mat-pseudo-checkbox-checked,
 .mat-accent .mat-pseudo-checkbox-indeterminate {
-  background: #448aff; }
+  background: #26a69a; }
 
 .mat-primary .mat-pseudo-checkbox-checked,
 .mat-primary .mat-pseudo-checkbox-indeterminate {
@@ -566,7 +566,7 @@ input.mat-input-element {
   .mat-button.mat-primary .mat-button-focus-overlay, .mat-icon-button.mat-primary .mat-button-focus-overlay, .mat-stroked-button.mat-primary .mat-button-focus-overlay {
     background-color: rgba(245, 0, 87, 0.12); }
   .mat-button.mat-accent .mat-button-focus-overlay, .mat-icon-button.mat-accent .mat-button-focus-overlay, .mat-stroked-button.mat-accent .mat-button-focus-overlay {
-    background-color: rgba(68, 138, 255, 0.12); }
+    background-color: rgba(38, 166, 154, 0.12); }
   .mat-button.mat-warn .mat-button-focus-overlay, .mat-icon-button.mat-warn .mat-button-focus-overlay, .mat-stroked-button.mat-warn .mat-button-focus-overlay {
     background-color: rgba(244, 67, 54, 0.12); }
   .mat-button[disabled] .mat-button-focus-overlay, .mat-icon-button[disabled] .mat-button-focus-overlay, .mat-stroked-button[disabled] .mat-button-focus-overlay {
@@ -574,7 +574,7 @@ input.mat-input-element {
   .mat-button.mat-primary, .mat-icon-button.mat-primary, .mat-stroked-button.mat-primary {
     color: #f50057; }
   .mat-button.mat-accent, .mat-icon-button.mat-accent, .mat-stroked-button.mat-accent {
-    color: #448aff; }
+    color: #26a69a; }
   .mat-button.mat-warn, .mat-icon-button.mat-warn, .mat-stroked-button.mat-warn {
     color: #f44336; }
   .mat-button.mat-primary[disabled], .mat-button.mat-accent[disabled], .mat-button.mat-warn[disabled], .mat-button[disabled][disabled], .mat-icon-button.mat-primary[disabled], .mat-icon-button.mat-accent[disabled], .mat-icon-button.mat-warn[disabled], .mat-icon-button[disabled][disabled], .mat-stroked-button.mat-primary[disabled], .mat-stroked-button.mat-accent[disabled], .mat-stroked-button.mat-warn[disabled], .mat-stroked-button[disabled][disabled] {
@@ -586,7 +586,7 @@ input.mat-input-element {
   .mat-raised-button.mat-primary, .mat-fab.mat-primary, .mat-mini-fab.mat-primary {
     color: white; }
   .mat-raised-button.mat-accent, .mat-fab.mat-accent, .mat-mini-fab.mat-accent {
-    color: white; }
+    color: rgba(0, 0, 0, 0.87); }
   .mat-raised-button.mat-warn, .mat-fab.mat-warn, .mat-mini-fab.mat-warn {
     color: white; }
   .mat-raised-button.mat-primary[disabled], .mat-raised-button.mat-accent[disabled], .mat-raised-button.mat-warn[disabled], .mat-raised-button[disabled][disabled], .mat-fab.mat-primary[disabled], .mat-fab.mat-accent[disabled], .mat-fab.mat-warn[disabled], .mat-fab[disabled][disabled], .mat-mini-fab.mat-primary[disabled], .mat-mini-fab.mat-accent[disabled], .mat-mini-fab.mat-warn[disabled], .mat-mini-fab[disabled][disabled] {
@@ -594,7 +594,7 @@ input.mat-input-element {
   .mat-raised-button.mat-primary, .mat-fab.mat-primary, .mat-mini-fab.mat-primary {
     background-color: #f50057; }
   .mat-raised-button.mat-accent, .mat-fab.mat-accent, .mat-mini-fab.mat-accent {
-    background-color: #448aff; }
+    background-color: #26a69a; }
   .mat-raised-button.mat-warn, .mat-fab.mat-warn, .mat-mini-fab.mat-warn {
     background-color: #f44336; }
   .mat-raised-button.mat-primary[disabled], .mat-raised-button.mat-accent[disabled], .mat-raised-button.mat-warn[disabled], .mat-raised-button[disabled][disabled], .mat-fab.mat-primary[disabled], .mat-fab.mat-accent[disabled], .mat-fab.mat-warn[disabled], .mat-fab[disabled][disabled], .mat-mini-fab.mat-primary[disabled], .mat-mini-fab.mat-accent[disabled], .mat-mini-fab.mat-warn[disabled], .mat-mini-fab[disabled][disabled] {
@@ -602,14 +602,14 @@ input.mat-input-element {
   .mat-raised-button.mat-primary .mat-ripple-element, .mat-fab.mat-primary .mat-ripple-element, .mat-mini-fab.mat-primary .mat-ripple-element {
     background-color: rgba(255, 255, 255, 0.2); }
   .mat-raised-button.mat-accent .mat-ripple-element, .mat-fab.mat-accent .mat-ripple-element, .mat-mini-fab.mat-accent .mat-ripple-element {
-    background-color: rgba(255, 255, 255, 0.2); }
+    background-color: rgba(0, 0, 0, 0.2); }
   .mat-raised-button.mat-warn .mat-ripple-element, .mat-fab.mat-warn .mat-ripple-element, .mat-mini-fab.mat-warn .mat-ripple-element {
     background-color: rgba(255, 255, 255, 0.2); }
 
 .mat-button.mat-primary .mat-ripple-element {
   background-color: rgba(245, 0, 87, 0.1); }
 .mat-button.mat-accent .mat-ripple-element {
-  background-color: rgba(68, 138, 255, 0.1); }
+  background-color: rgba(38, 166, 154, 0.1); }
 .mat-button.mat-warn .mat-ripple-element {
   background-color: rgba(244, 67, 54, 0.1); }
 
@@ -619,7 +619,7 @@ input.mat-input-element {
   .mat-flat-button.mat-primary {
     color: white; }
   .mat-flat-button.mat-accent {
-    color: white; }
+    color: rgba(0, 0, 0, 0.87); }
   .mat-flat-button.mat-warn {
     color: white; }
   .mat-flat-button.mat-primary[disabled], .mat-flat-button.mat-accent[disabled], .mat-flat-button.mat-warn[disabled], .mat-flat-button[disabled][disabled] {
@@ -627,7 +627,7 @@ input.mat-input-element {
   .mat-flat-button.mat-primary {
     background-color: #f50057; }
   .mat-flat-button.mat-accent {
-    background-color: #448aff; }
+    background-color: #26a69a; }
   .mat-flat-button.mat-warn {
     background-color: #f44336; }
   .mat-flat-button.mat-primary[disabled], .mat-flat-button.mat-accent[disabled], .mat-flat-button.mat-warn[disabled], .mat-flat-button[disabled][disabled] {
@@ -635,14 +635,14 @@ input.mat-input-element {
   .mat-flat-button.mat-primary .mat-ripple-element {
     background-color: rgba(255, 255, 255, 0.2); }
   .mat-flat-button.mat-accent .mat-ripple-element {
-    background-color: rgba(255, 255, 255, 0.2); }
+    background-color: rgba(0, 0, 0, 0.2); }
   .mat-flat-button.mat-warn .mat-ripple-element {
     background-color: rgba(255, 255, 255, 0.2); }
 
 .mat-icon-button.mat-primary .mat-ripple-element {
   background-color: rgba(245, 0, 87, 0.2); }
 .mat-icon-button.mat-accent .mat-ripple-element {
-  background-color: rgba(68, 138, 255, 0.2); }
+  background-color: rgba(38, 166, 154, 0.2); }
 .mat-icon-button.mat-warn .mat-ripple-element {
   background-color: rgba(244, 67, 54, 0.2); }
 
@@ -683,7 +683,7 @@ input.mat-input-element {
 .mat-checkbox-indeterminate.mat-primary .mat-checkbox-background, .mat-checkbox-checked.mat-primary .mat-checkbox-background {
   background-color: #f50057; }
 .mat-checkbox-indeterminate.mat-accent .mat-checkbox-background, .mat-checkbox-checked.mat-accent .mat-checkbox-background {
-  background-color: #448aff; }
+  background-color: #26a69a; }
 .mat-checkbox-indeterminate.mat-warn .mat-checkbox-background, .mat-checkbox-checked.mat-warn .mat-checkbox-background {
   background-color: #f44336; }
 
@@ -697,7 +697,7 @@ input.mat-input-element {
 .mat-checkbox:not(.mat-checkbox-disabled).mat-primary .mat-checkbox-ripple .mat-ripple-element {
   background-color: rgba(245, 0, 87, 0.26); }
 .mat-checkbox:not(.mat-checkbox-disabled).mat-accent .mat-checkbox-ripple .mat-ripple-element {
-  background-color: rgba(68, 138, 255, 0.26); }
+  background-color: rgba(38, 166, 154, 0.26); }
 .mat-checkbox:not(.mat-checkbox-disabled).mat-warn .mat-checkbox-ripple .mat-ripple-element {
   background-color: rgba(244, 67, 54, 0.26); }
 
@@ -727,10 +727,10 @@ input.mat-input-element {
   .mat-chip.mat-chip-selected.mat-warn .mat-chip-remove:hover {
     opacity: 0.54; }
 .mat-chip.mat-chip-selected.mat-accent {
-  background-color: #448aff;
-  color: white; }
+  background-color: #26a69a;
+  color: rgba(0, 0, 0, 0.87); }
   .mat-chip.mat-chip-selected.mat-accent .mat-chip-remove {
-    color: white;
+    color: rgba(0, 0, 0, 0.87);
     opacity: 0.4; }
   .mat-chip.mat-chip-selected.mat-accent .mat-chip-remove:hover {
     opacity: 0.54; }
@@ -838,12 +838,12 @@ input.mat-input-element {
 .mat-focused .mat-form-field-label {
   color: #f50057; }
   .mat-focused .mat-form-field-label.mat-accent {
-    color: #448aff; }
+    color: #26a69a; }
   .mat-focused .mat-form-field-label.mat-warn {
     color: #f44336; }
 
 .mat-focused .mat-form-field-required-marker {
-  color: #448aff; }
+  color: #26a69a; }
 
 .mat-form-field-underline {
   background-color: rgba(0, 0, 0, 0.42); }
@@ -856,7 +856,7 @@ input.mat-input-element {
 .mat-form-field-ripple {
   background-color: #f50057; }
   .mat-form-field-ripple.mat-accent {
-    background-color: #448aff; }
+    background-color: #26a69a; }
   .mat-form-field-ripple.mat-warn {
     background-color: #f44336; }
 
@@ -874,7 +874,7 @@ input.mat-input-element {
 .mat-icon.mat-primary {
   color: #f50057; }
 .mat-icon.mat-accent {
-  color: #448aff; }
+  color: #26a69a; }
 .mat-icon.mat-warn {
   color: #f44336; }
 
@@ -893,7 +893,7 @@ input.mat-input-element {
     color: rgba(0, 0, 0, 0.42); }
 
 .mat-accent .mat-input-element {
-  caret-color: #448aff; }
+  caret-color: #26a69a; }
 
 .mat-warn .mat-input-element,
 .mat-form-field-invalid .mat-input-element {
@@ -965,11 +965,11 @@ input.mat-input-element {
   background-color: #f50057; }
 
 .mat-progress-bar.mat-accent .mat-progress-bar-background {
-  fill: #82b1ff; }
+  fill: #b2dfdb; }
 .mat-progress-bar.mat-accent .mat-progress-bar-buffer {
-  background-color: #82b1ff; }
+  background-color: #b2dfdb; }
 .mat-progress-bar.mat-accent .mat-progress-bar-fill::after {
-  background-color: #448aff; }
+  background-color: #26a69a; }
 
 .mat-progress-bar.mat-warn .mat-progress-bar-background {
   fill: #ffcdd2; }
@@ -981,7 +981,7 @@ input.mat-input-element {
 .mat-progress-spinner circle, .mat-spinner circle {
   stroke: #f50057; }
 .mat-progress-spinner.mat-accent circle, .mat-spinner.mat-accent circle {
-  stroke: #448aff; }
+  stroke: #26a69a; }
 .mat-progress-spinner.mat-warn circle, .mat-spinner.mat-warn circle {
   stroke: #f44336; }
 
@@ -1003,11 +1003,11 @@ input.mat-input-element {
 .mat-radio-button.mat-primary .mat-radio-ripple .mat-ripple-element {
   background-color: rgba(245, 0, 87, 0.26); }
 .mat-radio-button.mat-accent.mat-radio-checked .mat-radio-outer-circle {
-  border-color: #448aff; }
+  border-color: #26a69a; }
 .mat-radio-button.mat-accent .mat-radio-inner-circle {
-  background-color: #448aff; }
+  background-color: #26a69a; }
 .mat-radio-button.mat-accent .mat-radio-ripple .mat-ripple-element {
-  background-color: rgba(68, 138, 255, 0.26); }
+  background-color: rgba(38, 166, 154, 0.26); }
 .mat-radio-button.mat-warn.mat-radio-checked .mat-radio-outer-circle {
   border-color: #f44336; }
 .mat-radio-button.mat-warn .mat-radio-inner-circle {
@@ -1036,7 +1036,7 @@ input.mat-input-element {
 .mat-form-field.mat-focused.mat-primary .mat-select-arrow {
   color: #f50057; }
 .mat-form-field.mat-focused.mat-accent .mat-select-arrow {
-  color: #448aff; }
+  color: #26a69a; }
 .mat-form-field.mat-focused.mat-warn .mat-select-arrow {
   color: #f44336; }
 .mat-form-field .mat-select.mat-select-invalid .mat-select-arrow {
@@ -1058,13 +1058,13 @@ input.mat-input-element {
   background-color: rgba(0, 0, 0, 0.6); }
 
 .mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-thumb {
-  background-color: #2196f3; }
+  background-color: #009688; }
 .mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-bar {
-  background-color: rgba(33, 150, 243, 0.5); }
+  background-color: rgba(0, 150, 136, 0.5); }
 .mat-slide-toggle:not(.mat-checked) .mat-ripple-element {
   background-color: rgba(0, 0, 0, 0.06); }
 .mat-slide-toggle .mat-ripple-element {
-  background-color: rgba(33, 150, 243, 0.12); }
+  background-color: rgba(0, 150, 136, 0.12); }
 .mat-slide-toggle.mat-primary.mat-checked:not(.mat-disabled) .mat-slide-toggle-thumb {
   background-color: #e91e63; }
 .mat-slide-toggle.mat-primary.mat-checked:not(.mat-disabled) .mat-slide-toggle-bar {
@@ -1106,9 +1106,9 @@ input.mat-input-element {
 .mat-accent .mat-slider-track-fill,
 .mat-accent .mat-slider-thumb,
 .mat-accent .mat-slider-thumb-label {
-  background-color: #448aff; }
+  background-color: #26a69a; }
 .mat-accent .mat-slider-thumb-label-text {
-  color: white; }
+  color: rgba(0, 0, 0, 0.87); }
 
 .mat-warn .mat-slider-track-fill,
 .mat-warn .mat-slider-thumb,
@@ -1118,7 +1118,7 @@ input.mat-input-element {
   color: white; }
 
 .mat-slider-focus-ring {
-  background-color: rgba(68, 138, 255, 0.2); }
+  background-color: rgba(38, 166, 154, 0.2); }
 
 .mat-slider:hover .mat-slider-track-background,
 .cdk-focused .mat-slider-track-background {
@@ -1216,11 +1216,11 @@ input.mat-input-element {
 .mat-tab-group.mat-accent .mat-tab-label:not(.mat-tab-disabled):focus,
 .mat-tab-group.mat-accent .mat-tab-link:not(.mat-tab-disabled):focus, .mat-tab-nav-bar.mat-accent .mat-tab-label:not(.mat-tab-disabled):focus,
 .mat-tab-nav-bar.mat-accent .mat-tab-link:not(.mat-tab-disabled):focus {
-  background-color: rgba(130, 177, 255, 0.3); }
+  background-color: rgba(178, 223, 219, 0.3); }
 .mat-tab-group.mat-accent .mat-ink-bar, .mat-tab-nav-bar.mat-accent .mat-ink-bar {
-  background-color: #448aff; }
+  background-color: #26a69a; }
 .mat-tab-group.mat-accent.mat-background-accent .mat-ink-bar, .mat-tab-nav-bar.mat-accent.mat-background-accent .mat-ink-bar {
-  background-color: white; }
+  background-color: rgba(0, 0, 0, 0.87); }
 .mat-tab-group.mat-warn .mat-tab-label:not(.mat-tab-disabled):focus,
 .mat-tab-group.mat-warn .mat-tab-link:not(.mat-tab-disabled):focus, .mat-tab-nav-bar.mat-warn .mat-tab-label:not(.mat-tab-disabled):focus,
 .mat-tab-nav-bar.mat-warn .mat-tab-link:not(.mat-tab-disabled):focus {
@@ -1248,19 +1248,19 @@ input.mat-input-element {
 .mat-tab-group.mat-background-accent .mat-tab-label:not(.mat-tab-disabled):focus,
 .mat-tab-group.mat-background-accent .mat-tab-link:not(.mat-tab-disabled):focus, .mat-tab-nav-bar.mat-background-accent .mat-tab-label:not(.mat-tab-disabled):focus,
 .mat-tab-nav-bar.mat-background-accent .mat-tab-link:not(.mat-tab-disabled):focus {
-  background-color: rgba(130, 177, 255, 0.3); }
+  background-color: rgba(178, 223, 219, 0.3); }
 .mat-tab-group.mat-background-accent .mat-tab-header, .mat-tab-group.mat-background-accent .mat-tab-links, .mat-tab-nav-bar.mat-background-accent .mat-tab-header, .mat-tab-nav-bar.mat-background-accent .mat-tab-links {
-  background-color: #448aff; }
+  background-color: #26a69a; }
 .mat-tab-group.mat-background-accent .mat-tab-label, .mat-tab-group.mat-background-accent .mat-tab-link, .mat-tab-nav-bar.mat-background-accent .mat-tab-label, .mat-tab-nav-bar.mat-background-accent .mat-tab-link {
-  color: white; }
+  color: rgba(0, 0, 0, 0.87); }
   .mat-tab-group.mat-background-accent .mat-tab-label.mat-tab-disabled, .mat-tab-group.mat-background-accent .mat-tab-link.mat-tab-disabled, .mat-tab-nav-bar.mat-background-accent .mat-tab-label.mat-tab-disabled, .mat-tab-nav-bar.mat-background-accent .mat-tab-link.mat-tab-disabled {
-    color: rgba(255, 255, 255, 0.4); }
+    color: rgba(0, 0, 0, 0.4); }
 .mat-tab-group.mat-background-accent .mat-tab-header-pagination-chevron, .mat-tab-nav-bar.mat-background-accent .mat-tab-header-pagination-chevron {
-  border-color: white; }
+  border-color: rgba(0, 0, 0, 0.87); }
 .mat-tab-group.mat-background-accent .mat-tab-header-pagination-disabled .mat-tab-header-pagination-chevron, .mat-tab-nav-bar.mat-background-accent .mat-tab-header-pagination-disabled .mat-tab-header-pagination-chevron {
-  border-color: rgba(255, 255, 255, 0.4); }
+  border-color: rgba(0, 0, 0, 0.4); }
 .mat-tab-group.mat-background-accent .mat-ripple-element, .mat-tab-nav-bar.mat-background-accent .mat-ripple-element {
-  background-color: rgba(255, 255, 255, 0.12); }
+  background-color: rgba(0, 0, 0, 0.12); }
 .mat-tab-group.mat-background-warn .mat-tab-label:not(.mat-tab-disabled):focus,
 .mat-tab-group.mat-background-warn .mat-tab-link:not(.mat-tab-disabled):focus, .mat-tab-nav-bar.mat-background-warn .mat-tab-label:not(.mat-tab-disabled):focus,
 .mat-tab-nav-bar.mat-background-warn .mat-tab-link:not(.mat-tab-disabled):focus {
@@ -1285,8 +1285,8 @@ input.mat-input-element {
     background: #f50057;
     color: white; }
   .mat-toolbar.mat-accent {
-    background: #448aff;
-    color: white; }
+    background: #26a69a;
+    color: rgba(0, 0, 0, 0.87); }
   .mat-toolbar.mat-warn {
     background: #f44336;
     color: white; }
@@ -1299,7 +1299,7 @@ input.mat-input-element {
   color: white; }
 
 .mat-simple-snackbar-action {
-  color: #448aff; }
+  color: #26a69a; }
 
 a {
   text-decoration: none;
@@ -1322,5 +1322,8 @@ a {
   height: 500px;
   background-size: cover;
   background-image: url("assets/public/header.jpg"); }
+
+.h3-contrat {
+  color: #26a69a; }
 
 /*# sourceMappingURL=styles.css.map */
