IHM contrat + preparation des classes

--- a/src/app/side-nav/side-nav.component.html
+++ b/src/app/side-nav/side-nav.component.html
@@ -40,6 +40,9 @@
                     <a routerLink="/Profiles">Liste des personnes</a>
                 </p>
                 <p>
+                    <a routerLink = "/SignUp">Ajouter un utilisateur</a>
+                </p>
+                <p>
                     <a routerLink = "/SignUp">Ajouter une personne</a>
                 </p>
                 <p>
