--- a/src/app/modif-profil/modif-profil.component.html
+++ b/src/app/modif-profil/modif-profil.component.html
@@ -65,7 +65,7 @@
     </div>
     <p>
         <button mat-raised-button (click)="fermeture()" name="fermeture">Annuler 
-            <mat-icon>close</mat-icon>
+            <mat-icon>cancel</mat-icon>
         </button> 
         <button mat-raised-button (click)="validation()" name="validation">Valider et fermer 
             <mat-icon>send</mat-icon>
