--- a/src/app/modif-profil/modif-profil.component.html
+++ b/src/app/modif-profil/modif-profil.component.html
@@ -34,10 +34,11 @@
     <mat-form-field>
         <input matInput [(ngModel)]="modifPersonnne.telPortable"type="text" placeholder="01-23-45-67-89 ou 0123456789" formControlName="telPortable" [formControl]="controltelPortable">
     </mat-form-field>
-    <mat-icon>date_range</mat-icon>
     <mat-form-field>
-        <input matInput [(ngModel)]="modifPersonnne.dateNaissance"type="text" placeholder ='jj/mm/aaaa' formControlName="dateNaissance" [formControl]="controlDateNaissance">
-        <mat-error *ngIf='controlDateNaissance.invalid'>Saisie invalide</mat-error>
+        <input matInput [matDatepicker]='dateNaissance' [(ngModel)]="modifPersonnne.dateNaissance" placeholder ='Date de naissance' formControlName="dateNaissance" [formControl]="controlDateNaissance">
+        <mat-datepicker-toggle matPrefix [for]="dateNaissance"></mat-datepicker-toggle>
+        <mat-datepicker #dateNaissance></mat-datepicker>
+        <!-- <mat-error *ngIf='controlDateNaissance.invalid'>Saisie invalide</mat-error> -->
     </mat-form-field>
     <mat-icon>place</mat-icon>
     <mat-form-field>
