--- a/src/app/modif-profil/modif-profil.component.html
+++ b/src/app/modif-profil/modif-profil.component.html
@@ -9,6 +9,7 @@
                 </mat-option>
             </mat-select>
         </mat-form-field>
+        modifPersonne : {{modifPersonnne.idPersonne}} 
     </div>
     <mat-icon matPrefix>person</mat-icon>
     <mat-form-field>
@@ -38,7 +39,6 @@
         <input matInput [matDatepicker]='dateNaissance' [(ngModel)]="modifPersonnne.dateNaissance" placeholder ='Date de naissance' formControlName="dateNaissance" [formControl]="controlDateNaissance">
         <mat-datepicker-toggle matPrefix [for]="dateNaissance"></mat-datepicker-toggle>
         <mat-datepicker #dateNaissance></mat-datepicker>
-        <!-- <mat-error *ngIf='controlDateNaissance.invalid'>Saisie invalide</mat-error> -->
     </mat-form-field>
     <mat-icon>place</mat-icon>
     <mat-form-field>
