--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -48,8 +48,8 @@
         <button mat-raised-button (click)="validation()" name="validation">Valider 
             <mat-icon>send</mat-icon>
         </button>    
-        <button mat-raised-button (click)="test()">
+        <!-- <button mat-raised-button (click)="test()">
             <mat-icon>build</mat-icon>Test
-        </button>
+        </button> -->
     </p>
 </form>
