--- a/src/app/contrat/contrat.component.html
+++ b/src/app/contrat/contrat.component.html
@@ -201,60 +201,60 @@
       <mat-form-field>
         <input matInput [(ngModel)]='donneesContrat.planning.lundi.heureDepart' placeholder="HH:MM" formControlName='lundiDepart'>
       </mat-form-field>  
-      <!-- <h3 class='h3-contrat'><u><i>Mardi</i></u></h3>
+      <h3 class='h3-contrat'><u><i>Mardi</i></u></h3>
       <label>Heure d'arrivée : </label>
       <mat-form-field>
-        <input matInput [(ngModel)]='donneesContrat.planning.mardi.heureArrivee' placeholder="HH:MM">
+        <input matInput [(ngModel)]='donneesContrat.planning.mardi.heureArrivee' placeholder="HH:MM" formControlName='mardiArrivee'>
       </mat-form-field>
       <label>Heure de départ : </label>
       <mat-form-field>
-        <input matInput [(ngModel)]='donneesContrat.planning.mardi.heureDepart' placeholder="HH:MM">
+        <input matInput [(ngModel)]='donneesContrat.planning.mardi.heureDepart' placeholder="HH:MM" formControlName='mardiDepart'>
       </mat-form-field>
       <h3 class='h3-contrat'><u><i>Mercredi</i></u></h3>
       <label>Heure d'arrivée : </label>
       <mat-form-field>
-        <input matInput [(ngModel)]='donneesContrat.planning.mercredi.heureArrivee' placeholder="HH:MM">
+        <input matInput [(ngModel)]='donneesContrat.planning.mercredi.heureArrivee' placeholder="HH:MM" formControlName='mercrediArrivee'>
       </mat-form-field>
       <label>Heure de départ : </label>
       <mat-form-field>
-        <input matInput [(ngModel)]='donneesContrat.planning.mercredi.heureDepart' placeholder="HH:MM">
+        <input matInput [(ngModel)]='donneesContrat.planning.mercredi.heureDepart' placeholder="HH:MM" formControlName='mercrediDepart'>
       </mat-form-field>
       <h3 class='h3-contrat'><u><i>Jeudi</i></u></h3>
       <label>Heure d'arrivée : </label>
       <mat-form-field>
-        <input matInput [(ngModel)]='donneesContrat.planning.jeudi.heureArrivee' placeholder="HH:MM">
+        <input matInput [(ngModel)]='donneesContrat.planning.jeudi.heureArrivee' placeholder="HH:MM" formControlName='jeudiArrivee'>
       </mat-form-field>
       <label>Heure de départ : </label>
       <mat-form-field>
-        <input matInput [(ngModel)]='donneesContrat.planning.jeudi.heureDepart' placeholder="HH:MM">
+        <input matInput [(ngModel)]='donneesContrat.planning.jeudi.heureDepart' placeholder="HH:MM" formControlName='jeudiDepart'>
       </mat-form-field>
       <h3 class='h3-contrat'><u><i>Vendredi</i></u></h3>
       <label>Heure d'arrivée : </label>
       <mat-form-field>
-        <input matInput [(ngModel)]='donneesContrat.planning.vendredi.heureArrivee' placeholder="HH:MM">
+        <input matInput [(ngModel)]='donneesContrat.planning.vendredi.heureArrivee' placeholder="HH:MM" formControlName='vendrediArrivee'>
       </mat-form-field>
       <label>Heure de départ : </label>
       <mat-form-field>
-        <input matInput [(ngModel)]='donneesContrat.planning.vendredi.heureDepart' placeholder="HH:MM">
+        <input matInput [(ngModel)]='donneesContrat.planning.vendredi.heureDepart' placeholder="HH:MM" formControlName='vendrediDepart'>
       </mat-form-field>
       <h3 class='h3-contrat'><u><i>Samedi</i></u></h3>
       <label>Heure d'arrivée : </label>
       <mat-form-field>
-        <input matInput [(ngModel)]='donneesContrat.planning.samedi.heureArrivee' placeholder="HH:MM">
+        <input matInput [(ngModel)]='donneesContrat.planning.samedi.heureArrivee' placeholder="HH:MM" formControlName='samediArrivee'>
       </mat-form-field>
       <label>Heure de départ : </label>
       <mat-form-field>
-        <input matInput [(ngModel)]='donneesContrat.planning.samedi.heureDepart' placeholder="HH:MM">
+        <input matInput [(ngModel)]='donneesContrat.planning.samedi.heureDepart' placeholder="HH:MM" formControlName='samediDepart'>
       </mat-form-field>
       <h3 class='h3-contrat'><u><i>Dimanche</i></u></h3>
       <label>Heure d'arrivée : </label>
       <mat-form-field>
-        <input matInput [(ngModel)]='donneesContrat.planning.dimanche.heureArrivee' placeholder="HH:MM">
+        <input matInput [(ngModel)]='donneesContrat.planning.dimanche.heureArrivee' placeholder="HH:MM" formControlName='dimancheArrivee'>
       </mat-form-field>
       <label>Heure de départ : </label>
       <mat-form-field>
-        <input matInput [(ngModel)]='donneesContrat.planning.dimanche.heureDepart' placeholder="HH:MM">
-      </mat-form-field> -->
+        <input matInput [(ngModel)]='donneesContrat.planning.dimanche.heureDepart' placeholder="HH:MM" formControlName='dimancheDepart'>
+      </mat-form-field>
     </form>    
   </mat-tab>
 </mat-tab-group>
