--- a/src/app/contrat/contrat.component.html
+++ b/src/app/contrat/contrat.component.html
@@ -203,7 +203,7 @@
       </mat-form-field>  
       <h3 class='h3-contrat'><u><i>Mardi</i></u></h3>
       <label>Heure d'arrivée : </label>
-      <mat-form-field>
+      <!-- <mat-form-field>
         <input matInput [(ngModel)]='donneesContrat.planning.mardi.heureArrivee' placeholder="HH:MM" formControlName='mardiArrivee'>
       </mat-form-field>
       <label>Heure de départ : </label>
@@ -254,7 +254,7 @@
       <label>Heure de départ : </label>
       <mat-form-field>
         <input matInput [(ngModel)]='donneesContrat.planning.dimanche.heureDepart' placeholder="HH:MM" formControlName='dimancheDepart'>
-      </mat-form-field>
+      </mat-form-field>*/ -->
     </form>    
   </mat-tab>
 </mat-tab-group>
